== fix progress container initially width 0px and visible with backgroundcolor file management

--- a/style/ui.css
+++ b/style/ui.css
@@ -20,7 +20,14 @@
 	left:315px;
 	top:60px;
 	width:0px;
-	background-color: rgba(100,100,100,0.3);
+	background-color: rgba(100,100,100,0.4);
+	
+	text-align: center;
+	line-height: 46px;
+	font-size: 23px;
+	color: #ffffff;
+	text-shadow: 0 1px 0 #000;
+
 	border-radius: 5px; 
 	height:550px;
 	opacity: 0.95;
